[package]
name = "raft-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.20"
env_logger = "0.11.2"
rand = "0.8.5"
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[build-dependencies]
tonic-build = "0.11"
